[package]
name = "assignment5"
version = "0.1.0"
authors = ["hunain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapes = {path = "shapes"}
numbers = {path = "numbers"}
stringtype = {path = "stringtype"}
calculator = {path = "calculator"}
calculatorv2 = {path = "calculatorv2"}
text_io = "0.1.7"